fix box shadow bleed out

--- a/projects/demo/src/app/components/examples/component-example/component-example.component.scss
+++ b/projects/demo/src/app/components/examples/component-example/component-example.component.scss
@@ -60,7 +60,7 @@ $fz: 2vmin;
   margin-bottom: 5%;
 }
 
-::ng-deep .kn-items {
+::ng-deep .package-component-example .kn-items {
   padding: .8em .8em;
   background-color: #fff;
   //text-align: center;
