--- a/projects/demo/src/app/components/examples/item-extension-example/item-extension-example.component.scss
+++ b/projects/demo/src/app/components/examples/item-extension-example/item-extension-example.component.scss
@@ -58,7 +58,7 @@ $fz: 2vmin;
   margin-bottom: 5%;
 }
 
-::ng-deep .kn-items {
+::ng-deep .package-component-example  .kn-items {
   padding: .8em .8em;
   background-color: #fff;
   //text-align: center;
